RESOLVED FIXED197658
REGRESSION(r239915): [FreeType] White space skipped when rendering plain text with noto CJK font
https://bugs.webkit.org/show_bug.cgi?id=197658
Summary REGRESSION(r239915): [FreeType] White space skipped when rendering plain text...
Alberto Garcia
Reported 2019-05-07 06:27:37 PDT
This happens with WebKitGTK 2.24.1 and (at least) the Japanese locale using the fonts-noto-cjk package. In order to reproduce it you just need to open any plain text file using the Japanese locale, e.g: LC_ALL=ja_JP.UTF-8 MiniBrowser file:///etc/profile The white space does not appear at all. Using a different locale (I tried C and es_ES.UTF-8) it work fine. This is causing problems displaying e-mail in Evolution. See Debian bugs https://bugs.debian.org/926872 and https://bugs.debian.org/928399
Attachments
Patch (3.17 KB, patch)
2019-05-08 02:37 PDT, Carlos Garcia Campos
mcatanzaro: review+
Archive of layout-test-results from ews211 for win-future (13.48 MB, application/zip)
2019-05-08 04:25 PDT, EWS Watchlist
no flags
Carlos Garcia Campos
Comment 1 2019-05-08 02:37:31 PDT
Alberto Garcia
Comment 2 2019-05-08 03:50:08 PDT
(In reply to Carlos Garcia Campos from comment #1) > Created attachment 369368 [details] > Patch This patch fixes the issue for me.
EWS Watchlist
Comment 3 2019-05-08 04:25:13 PDT Comment hidden (obsolete)
EWS Watchlist
Comment 4 2019-05-08 04:25:25 PDT Comment hidden (obsolete)
Takahide Nojima
Comment 5 2019-05-08 09:51:31 PDT
*** Bug 197570 has been marked as a duplicate of this bug. ***
Carlos Garcia Campos
Comment 6 2019-05-08 23:06:33 PDT
Note You need to log in before you can comment on or make changes to this bug.